<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:layout_width="200dp"
              android:focusable="true"
              android:gravity="center"
              android:visibility="gone"
              android:layout_marginLeft="80dp"
              android:id="@+id/modifyTime"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:background="@drawable/setting_selector"
              android:focusableInTouchMode="true"
              android:clickable="true"
              android:layout_height="wrap_content">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/white"
              android:textSize="17sp"
              android:focusable="false"
              android:layout_marginLeft="40dp"
              android:focusableInTouchMode="false"
              android:text="@string/time_delay"/>

    <ImageView android:layout_width="20dp"
               android:layout_height="20dp"
               android:focusable="false"
               android:layout_marginLeft="3dp"
               android:focusableInTouchMode="false"
               android:background="@drawable/ic_left"/>
    <TextView android:layout_width="0dp"
              android:layout_height="30dp"
              android:layout_weight="1"
              android:focusable="false"
              android:id="@+id/currentSyncTime"
              android:focusableInTouchMode="false"
              android:textSize="17sp"
              android:textColor="@color/white"
              android:gravity="center"
              tools:text="@string/three_number"/>
    <ImageView android:layout_width="20dp"
               android:layout_height="20dp"
               android:focusable="false"
               android:focusableInTouchMode="false"
               android:background="@drawable/ic_right"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/white"
              android:textSize="14sp"
              android:layout_marginLeft="2dp"
              android:focusable="false"
              android:focusableInTouchMode="false"
              android:text="@string/millseconds"/>

</LinearLayout>